--- a/src/main/resources/templates/board/QnA.html
+++ b/src/main/resources/templates/board/QnA.html
@@ -6,7 +6,10 @@
 </head>
 <body>
 
-<header th:replace="~{header :: header}"></header>
+<div th:replace="~{piece :: header}"></div>
+
+<h1>QnA</h1>
+<hr>
 
 <main th:with="list = ${map['list']} , pg = ${map['pg'] } ">
     <table>
@@ -27,58 +30,47 @@
     </table>
 
     <br>
-    <div th:if ="${not empty param.type }">
-        <div th:with ="type = '&type=${param.type}' ">
-            <div th:with ="search = '&search=${param.search}' ">
 
-                <ul class="page">
-                    <li th:if ="${pg.prev }">
-                        <a href="/board/freeBoard?page=${pg.begin - 1}${type}${search}">
-                            이전
-                        </a>
-                    </li>
+    <ul class="page" th:with="groupParam=${param.group != null ? 'group=' + param.group : ''}, searchParam=${param.search != null ? 'search=' + param.search : ''}">
+        <li th:if="${pg.prev}">
+            <a th:href="@{|/board/QnA?page=${pg.begin - 1}&${groupParam}&${searchParam}|}">
+                이전
+            </a>
+        </li>
 
-                    <li th:each="i : ${#numbers.sequence(pg.begin, pg.end)}">
-                        <a href="/board/freeBoard?page=${i }${type}${search}">
-                            ${i }
-                        </a>
-                    </li>
+        <li th:each="i : ${#numbers.sequence(pg.begin, pg.end)}">
+            <a th:href="@{|/board/QnA?page=${i}&${groupParam}&${searchParam}|}">
+                <span th:text="${i}"></span>
+            </a>
+        </li>
 
-                    <li th:if ="${pg.next }">
-                        <a href="/board/freeBoard?page=${pg.end + 1}${type}${search}">
-                            다음
-                        </a>
-                    </li>
-                </ul>
+        <li th:if="${pg.next}">
+            <a th:href="@{|/board/QnA?page=${pg.end + 1}&${groupParam}&${searchParam}|}">
+                다음
+            </a>
+        </li>
+    </ul>
 
+    <form th:action="@{/board/freeBoard}" method="get">
+        <select name="group">
+            <option value="title">제목</option>
+            <option value="nick">작성자</option>
+            <option value="contents">내용</option>
+        </select>
 
-                <br>
+        <input name="search" type="text">
 
-                <form>
-                    <select name="type">
-                        <option value="title">제목</option>
-                        <option value="nick">작성자</option>
-                        <option value="contents">내용</option>
-                    </select>
-
-                    <input name="search">
-
-                    <button>검색</button>
-                </form>
+        <button type="submit">검색</button>
+    </form>
 
 
+    <br>
 
+    <a th:href="@{/board/fBadd}">
+        <button>글 작성</button>
+    </a>
 
-            </div>
-        </div>
-
-        <br>
-
-        <a href="/board/QnAadd">
-            <button>글 작성</button>
-        </a>
-    </div>
-
+    <div th:replace="~{piece :: footer}"></div>
 </main>
 
 </body>
