--- a/src/main/resources/templates/board/QnA_view.html
+++ b/src/main/resources/templates/board/QnA_view.html
@@ -2,58 +2,46 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>QnA_View</title>
+    <title>자유게시판</title>
 </head>
 <body>
+<div th:replace="~{piece :: header}"></div>
 
+<h1>자유 게시판 상세 보기</h1>
+<hr>
 
 <table th:with="row = ${row}">
 
     <tr>
-        <th th:text="제목"></th>
+        <th>제목</th>
         <td th:text="${row.title}"></td>
     </tr>
     <tr>
-        <th th:text="작성자"></th>
+        <th>작성자</th>
         <td th:text="${row.nick}"></td>
     </tr>
     <tr>
-        <th th:text="조회수"></th>
-        <td th:text="${row.v_count }"></td>
-        <th th:text="작성일"></th>
+        <th>조회수</th>
+        <td th:text="${row.v_count}"></td>
+        <th>작성일</th>
         <td th:text="${row.w_date}"></td>
     </tr>
     <tr>
-        <th th:text="내용"></th>
-        <td th:text="${row.contents}"></td>
+        <th>내용</th>
+        <td th:utext="${row.contents}"></td>
     </tr>
 
 </table>
 
-<div th:if="${row.nick == user.nick }">
-    <a href="$/board/updateQnA/${row.idx }">
-        <button>수정</button>
-    </a>
-
-    <a href="/board/delete/${row.idx }">
-        <button>삭제</button>
-    </a>
-</div>
-<div>
-    <h5>댓글</h5>
-
-    <form class="replyWrite" method="POST">
-        <textarea name="contents" placeholder="바른말을 사용합시다"></textarea>
-
-        <button>작성</button>
+<div th:if="${row != null} and ${user != null} and ${row.member_id == user.id}">
+    <form th:action="'/board/updateQnA/' + ${row.id}" method="get">
+        <input type="submit" value="수정">
     </form>
-
-    <fieldset class="reply" th:each="row : ${replys }">
-        <p>${row.nick } | ${row.w_date }</p>
-
-        <pre>${row.contents }</pre>
-    </fieldset>
+    <form th:action="'/board/deleteQnA/' + ${row.id}" method="post" onsubmit="return delcheck()">
+        <input type="submit" value="삭제">
+    </form>
 </div>
+
 
 
 </body>
