--- a/src/main/resources/templates/board/QnA.html
+++ b/src/main/resources/templates/board/QnA.html
@@ -74,6 +74,7 @@
     </ul>
 
     <form th:action="@{/board/QnA}" method="get">
+        <input value="105" type="hidden" name="num">
         <select name="group">
             <option value="title">제목</option>
             <option value="nick">작성자</option>
