--- a/src/main/resources/templates/board/freeBoard.html
+++ b/src/main/resources/templates/board/freeBoard.html
@@ -72,6 +72,7 @@
     </ul>
 
     <form th:action="@{/board/freeBoard}" method="get">
+        <input value="102" type="hidden" name="num" >
         <select name="group">
             <option value="title">제목</option>
             <option value="nick">작성자</option>
