--- a/src/main/resources/templates/board/notice.html
+++ b/src/main/resources/templates/board/notice.html
@@ -72,6 +72,7 @@
 	</ul>
 
 	<form th:action="@{/board/notice}" method="get">
+		<input value="101" type="hidden" name="num">
 		<select name="group">
 			<option value="title">제목</option>
 			<option value="nick">작성자</option>
