--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -10,6 +10,7 @@
 
 	<a href="/member/login">로그인</a>
 	<a href="/pay/market">상품</a>
-	<a href="/pay/order">주문 목록</a>
+	<a href="/pay/order">장바구니 목록</a>
+	<a href="/pay/Orderprepare">주문 목록</a>
 </body>
 </html>
