--- a/src/main/resources/templates/board/QnA_view.html
+++ b/src/main/resources/templates/board/QnA_view.html
@@ -50,6 +50,7 @@
 
 <h2>댓글</h2>
 <hr>
+<main th:with="replies=${map['replies']}, pg=${map['pg']}">
 <table th:if="${replies != null}">
     <tr th:each="reply : ${replies}">
         <td th:text="${reply.nick}"></td>
@@ -67,7 +68,27 @@
     </tr>
 </table>
 
-<div th:if="${row.nick == user.nick }">
+<ul class="page">
+    <li th:if="${pg.prev}">
+        <a th:href="@{|/board/replies?page=${pg.begin - 1}|}">
+            이전
+        </a>
+    </li>
+
+    <li th:each="i : ${#numbers.sequence(pg.begin, pg.end)}">
+        <a th:href="@{|/board/replies?page=${i}|}">
+            <span th:text="${i}"></span>
+        </a>
+    </li>
+
+    <li th:if="${pg.next}">
+        <a th:href="@{|/board/replies?page=${pg.end + 1}|}">
+            다음
+        </a>
+    </li>
+</ul>
+
+<div th:if="${row != null} and ${user != null} and ${row.member_id == user.id}">
     <a href="$/board/updateQnA/${row.idx }">
         <button>수정</button>
     </a>
@@ -90,7 +111,7 @@
         <pre>${row.contents }</pre>
     </fieldset>
 </div>
-
+</main>
 <div th:replace="~{piece :: footer}"></div>
 </body>
 </html>
