--- a/src/main/resources/templates/board/QnA.html
+++ b/src/main/resources/templates/board/QnA.html
@@ -41,14 +41,17 @@
         </tr>
         <tr th:each="row : ${list}">
             <td th:text="${row.id}"></td>
-            <td th:text="${row.title != null ? row.title : ''}"></td>
-            <td><a class="content"
-                   th:href="@{/board/QnA_view/{id}(id=${row.id})}"
-                   th:utext="${#strings.length(row.contents) > 10 ? #strings.substring(row.contents, 0, 10) : row.contents}"></a></td>
+            <td th:text="${#strings.length(row.title) > 10 ?
+            #strings.substring(row.title, 0, 10) : row.title}"></td>
+            <td><a class="content" th:href="@{/board/QnA_view/{id}(id=${row.id})}"
+                   th:utext="${#strings.length(row.contents) > 10 ?
+                #strings.substring(row.contents, 0, 10) : row.contents}"></a></td>
             <td th:text="${row.v_count != null ? row.v_count : ''}"></td>
             <td th:text="${row.nick != null ? row.nick : ''}"></td>
             <td th:text="${row.w_date != null ? row.w_date : ''}"></td>
+
         </tr>
+
     </table>
 
     <br>
