--- a/src/main/resources/templates/board/freeBoard.html
+++ b/src/main/resources/templates/board/freeBoard.html
@@ -39,7 +39,8 @@
         </tr>
         <tr th:each="row : ${list}">
             <td th:text="${row.id}"></td>
-            <td th:text="${row.title != null ? row.title : ''}"></td>
+            <td th:text="${#strings.length(row.title) > 10 ?
+            #strings.substring(row.title, 0, 10) : row.title}"></td>
             <td><a class="content"
                    th:href="@{/board/fB_view/{id}(id=${row.id})}"
                    th:utext="${#strings.length(row.contents) > 10 ? #strings.substring(row.contents, 0, 10) : row.contents}"></a></td>
