--- a/src/main/resources/templates/pay/market.html
+++ b/src/main/resources/templates/pay/market.html
@@ -60,16 +60,14 @@
 			<th>No</th>
 			<th>상품명</th>
 			<th>상품가격</th>
-			<th>갯수</th>
 		</tr>
 		</thead>
 		
 		<tbody>
 			<tr th:each="row : ${list}">
 				<td><a th:href="'detailPage/' + ${row.id}" th:text="${row.id}"></a></td>
-				<td th:text="${row.order_id }"></td>
+				<td th:text="${row.product_name }"></td>
 				<td th:text="${row.price }"></td>
-				<td th:text="${row.count }"></td>
 			</tr>	
 		</tbody>
 	</table>
