--- a/src/main/resources/templates/download.html
+++ b/src/main/resources/templates/download.html
@@ -24,7 +24,7 @@
                 <div>
                     <a
                             class="inline-flex h-10 items-center justify-center rounded-md bg-green-600 px-6 py-2 text-sm font-medium text-white shadow transition-colors hover:bg-green-700 focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-green-800 disabled:pointer-events-none disabled:opacity-50 dark:bg-green-500 dark:text-white dark:hover:bg-green-600 dark:focus-visible:ring-green-700"
-                            href="#"
+                            href="/download/IoT.apk"
                     >
                         Download App
                     </a>
