--- a/src/main/resources/templates/pay/details.html
+++ b/src/main/resources/templates/pay/details.html
@@ -8,5 +8,10 @@
 </head>
 <body>
 
+<a href="/pay/market">제품목록</a>
+<a href="/pay/order">장바구니</a>
+<a href="/pay/orderPrepare">주문현황</a>
+
+
 </body>
 </html>
